--- a/css/markdown7_side.css
+++ b/css/markdown7_side.css
@@ -1,10 +1,6 @@
-﻿@font-face {
-	font-family: "ggf";
-	src: url("../fonts/Noto_Sans_JP/NotoSansJP-Medium.ttf") ;
-}
-
-body {
-   font-family: 'ggf', sans-serif;
+﻿body {
+   /*font-family: Helvetica, arial, sans-serif;*/
+   font-family: 'M+PLUS+Rounded+1c|Nanum+Gothic|Roboto', sans-serif;
    font-size: 14px;
    line-height: 1.6;
    padding-top: 10px;
@@ -102,11 +98,11 @@ h6 {
    font-size: 14px; }
 
 p {
-   margin: 4px 0;
+   margin: 8px 0;
 }
 
 blockquote, ul, ol, dl, li, table, pre {
-   margin: 8px 0;
+   margin: 12px 0;
 }
 
 hr {
